Allow all origin patterns in SecurityConfig to prevent CORS issues on deployed frontend